; ModuleID = '/home/carl/AnghaBench/libuv/src/unix/extr_core.c_uv_os_getpriority.c'
source_filename = "/home/carl/AnghaBench/libuv/src/unix/extr_core.c_uv_os_getpriority.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@UV_EINVAL = common dso_local global i32 0, align 4
@errno = common dso_local global i64 0, align 8
@PRIO_PROCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @uv_os_getpriority(i64 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load i32*, i32** %5, align 8
  %8 = icmp eq i32* %7, null
  br i1 %8, label %9, label %11

9:                                                ; preds = %2
  %10 = load i32, i32* @UV_EINVAL, align 4
  store i32 %10, i32* %3, align 4
  br label %27

11:                                               ; preds = %2
  store i64 0, i64* @errno, align 8
  %12 = load i32, i32* @PRIO_PROCESS, align 4
  %13 = load i64, i64* %4, align 8
  %14 = trunc i64 %13 to i32
  %15 = call i32 @getpriority(i32 %12, i32 %14)
  store i32 %15, i32* %6, align 4
  %16 = load i32, i32* %6, align 4
  %17 = icmp eq i32 %16, -1
  br i1 %17, label %18, label %24

18:                                               ; preds = %11
  %19 = load i64, i64* @errno, align 8
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %24

21:                                               ; preds = %18
  %22 = load i64, i64* @errno, align 8
  %23 = call i32 @UV__ERR(i64 %22)
  store i32 %23, i32* %3, align 4
  br label %27

24:                                               ; preds = %18, %11
  %25 = load i32, i32* %6, align 4
  %26 = load i32*, i32** %5, align 8
  store i32 %25, i32* %26, align 4
  store i32 0, i32* %3, align 4
  br label %27

27:                                               ; preds = %24, %21, %9
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local i32 @getpriority(i32, i32) #1

declare dso_local i32 @UV__ERR(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
